--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && node ./ghpages.js"
   },
   "dependencies": {
     "gsap": "^3.10.4",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "gh-pages": "^4.0.0",
     "sass": "~1.32.12",
     "vite": "^2.9.6",
     "vite-plugin-mkcert": "^1.6.0",
