--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gsap": "^3.10.4",
     "vivus": "^0.4.6",
     "vue": "^3.2.25",
+    "vue-cool-lightbox": "^2.7.4",
+    "vue-fancybox": "^1.0.3",
     "vue-loading-overlay": "^5.0.3",
     "vue-plyr": "^7.0.0",
     "vue-router": "^4.0.13",
